@startuml
hide circle
skinparam linetype ortho

entity "User" as User {
  + id : UUID <<PK>>
  --
  email : varchar(255) <<unique>>
  hashed_password : text
  full_name : varchar(255)
  phone : varchar(20)
  role : UserRole
  status : UserStatus
  avatar_url : text
  max_loans : int
  created_at : timestamp
  updated_at : timestamp
}

entity "Category" as Category {
  + id : UUID <<PK>>
  --
  name : varchar(100) <<unique>>
  description : text
  created_at : timestamp
}

entity "Document" as Document {
  + id : UUID <<PK>>
  --
  title : varchar(255)
  description : text
  file_path : text
  file_type : DocumentType
  file_size : int
  original_file_name : text
  status : DocumentStatus
  uploaded_by : UUID <<FK>>
  reviewed_by : UUID <<FK>>
  category_id : UUID <<FK>>
  review_comment : text
  created_at : timestamp
  updated_at : timestamp
}

' Relationships

User "1" -- "0..*" Document
User "1" -- "0..*" Document
Category "1" -- "0..*" Document

@enduml